
	XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 17 (CVS):

- New Sweedish translation by Daniel Nylander.
- Possibility to set display of unavailable ROM's preview
images in gray scale.
- Replace some thread function marked like deprecated in the
latest version of PyGTK.


* Changes in version 16 (2006-09-30):

- The user may now only choose a certain BIOS type when it is
available in his/her BIOS directory.
corresponding files have been found in the BIOS directory
- Ability to customize the background color of available ROMs 
in the list.
- Ignoring joystick device initialization message within Gngeo
standart output.
- Bug fix in the manual ROM selection window.
- ROM selection in the list doesn't require double click any
more, just single. :p
- Increased ROM list displaying speed (especialy when ``Show
available ROM only"option is enabled).
- Improved ROM list refreshing feature (now applied just after
having updated the ROM directory list).
- Ability to remove a ROM from the file system through the ROM
list window.
- Support of a ROM drivers file switched  to a ROM drivers
directory (the new standard since GnGeo 0.7).
- Minimum accepted Gngeo version increased to 0.7 (current :p).
- Long name for all new history entry [Achraf cherti] 
- Optional use of Psyco (if module is available) to boost
XGngeo's overall speed performance [Achraf Cherti].
- Bug fix: no more crash when removing an entry which was below
a just removed one in the ROM History menu [Achraf Cherti].
- xgngeo.desktop : Freedesktop.org menu entry [Achraf cherti]
- Bug fix: multiple custom ROM directory paths were considered
as one single big path because of lack of line break in the
related configuration file [patch by Achraf Cherti].
- Even more improved ROM detection in the ROM list.
- Several code style enhancements.
- LICENSE.txt updated (because of old FSF adress) [Achraf cherti]

	Yet present in the beta version (2006-07-14):
