@@ -3,6 +3,8 @@
 ~~~~~~~~~~~~~~~~~~~~
 
 - Joystick key configuration support. (IN PROGRESS)
+- More information given in the Important Paths configuration
+window.
 - ROM drivers editing interface (with online synchoniztion
 available).
 - Quick loading menu for favorite ROMs.
